[aside] JS: correction des selects avec scrollbar dans le search engine

--- a/web/css/vacancesdirectes/aside.less
+++ b/web/css/vacancesdirectes/aside.less
@@ -137,7 +137,7 @@ aside{
       select{display:none;}
       #SearchDate_selectContainer2{
         .newListSelected{
-          .SSContainerDivWrapper{min-width:268px;}
+//          .SSContainerDivWrapper{min-width:268px;}
         }
       }
       #SearchDate_switch{float:right;
