--- a/web/css/vacancesdirectes/couloir.less
+++ b/web/css/vacancesdirectes/couloir.less
@@ -550,7 +550,6 @@ h4{font-size:15px;line-height:17px;}
 
 ._stylish-select(@selectWidth,@selectHeight,@marginRight,@spriteNumber){
   .SSContainerDivWrapper {min-width:@selectWidth;}
-  .SSContainerDivWrapper.maxHeight {min-width:@selectWidth + 5px;}
   ul.newList a {._verticalCenter(@selectHeight);}
   .newListSelected {width:@selectWidth;._verticalCenter(@selectHeight);margin-right:@marginRight;
     .selectedTxt {width:@selectWidth - @selectHeight - 7px;._verticalCenter(@selectHeight);padding:0 @selectHeight 0 7px;}
